# DATALOGGER

./: .cproject  .gitignore  README.md  STM32_DATALOGGER.ioc
Datalogger_Lib/inc/: cmd_parser.h  print_cli.h  ring_buffer.h  sht3x.h
Datalogger_Lib/src/: cmd_func.c  cmd_parser.c  sht3x.c  uart.c
Debug/: makefile  objects.list
Debug/Core/Src/: main.d
Debug/Datalogger_Lib/src/: cmd_func.d  cmd_parser.d  command_execute.cyclo  command_execute.d  command_execute.su  print_cli.cyclo  print_cli.d  print_cli.su  ring_buffer.cyclo  ring_buffer.d  ring_buffer.su  sht3x.d  subdir.mk  uart.cyclo  uart.d  uart.su
Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
broker/: README.md  mosquitto.conf
broker/data/: mosquitto.db
firmware/: Firmware.md  README.md
firmware/ESP32/: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/ESP32/components/mqtt_handler/: mqtt_handler.c  mqtt_handler.h
firmware/ESP32/components/relay_control/: relay_control.c  relay_control.h
firmware/ESP32/components/ring_buffer/: ring_buffer.c  ring_buffer.h
firmware/ESP32/components/sensor_parser/: sensor_parser.c  sensor_parser.h
firmware/ESP32/components/stm32_uart/: stm32_uart.c  stm32_uart.h
firmware/ESP32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
firmware/STM32/: .project  README.md
firmware/STM32/Core/Src/: main.c
firmware/STM32/Datalogger_Lib/inc/: cmd_func.h  command_execute.h  sht3x.h  uart.h
firmware/STM32/Datalogger_Lib/src/: cmd_parser.c  command_execute.c  print_cli.c  ring_buffer.c  (+1 more)
web/: README.md  index.html  script.js  style.css
(+1 files in other folders)
